k8s/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: account-svc
spec:
  replicas: 4
  selector:
    matchLabels:
      app: account-svc
  template:
    metadata:
      labels:
        app: account-svc
    spec:
      containers:
        - name: account-service
          image: bhojrajpatil/account-svc:latest
          ports:
            - containerPort: 3000
