k8s/bank-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-api
  labels:
    app: bank-api
spec:
  replicas: 4
  selector:
    matchLabels:
      app: bank-api
  template:
    metadata:
      labels:
        app: bank-api
    spec:
      containers:
        - name: bank-api
          image: gcr.io/banking-k8s-467906/bank-api:latest
          ports:
            - containerPort: 3000
