k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bank-db
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bank-db
  template:
    metadata:
      labels:
        app: bank-db
    spec:
      containers:
        - name: postgres
          image: postgres:15
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-init-script
              mountPath: /docker-entrypoint-initdb.d
              readOnly: true
      volumes:
        - name: db-init-script
          configMap:
            name: db-init
