k8s/account-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: account-svc
spec:
  selector:
    app: account-svc
  ports:
    - port: 80
      targetPort: 3000
