k8s/bank-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-api
spec:
  selector:
    app: bank-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
