k8s/bank-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bank-db
spec:
  selector:
    app: bank-db
  ports:
    - port: 5432
      targetPort: 5432
