k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
spec:
  selector:
    app: bank-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
