k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bank-ingress
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /healthz
          pathType: Prefix
          backend:
            service:
              name: bank-api
              port:
                number: 3000
        - path: /accountBalance
          pathType: Prefix
          backend:
            service:
              name: bank-api
              port:
                number: 3000
        - path: /addMoney
          pathType: Prefix
          backend:
            service:
              name: bank-api
              port:
                number: 3000
        - path: /transferMoney
          pathType: Prefix
          backend:
            service:
              name: bank-api
              port:
                number: 3000
